# Meridian

./: .editorconfig  .env.example  .gitignore  .prettierignore  .solhint.json  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
apps/web/: package.json  tailwind.config.ts
backend/: package.json
backend/alerts/: package.json  runbooks.json
backend/api/: package.json  tsconfig.json
backend/indexer/: package.json
backend/keeper/: go.mod
backend/margin-engine/: pyproject.toml
backend/margin-engine/src/margin_engine/: __init__.py  api.py  engine.py  main.py  models.py  params.py
backend/margin-engine/tests/: test_api.py  test_engine.py  test_params_parity.py
contracts/: foundry.toml  slither.config.json
contracts/config/: protocol-spec.json  risk-params.json
contracts/script/: Deploy.s.sol  Seed.s.sol  Smoke.s.sol
contracts/security/: threat-model.json
contracts/src/: AccessController.sol  AdapterRegistry.sol  ChainlinkPriceOracle.sol  CreditFacade.sol  CreditManager.sol  CreditManagerFactory.sol  InterestRateModel.sol  LiquidationModule.sol  MarginAccount.sol  Pool.sol  PoolFactory.sol  PriceOracle.sol  RiskConfigurator.sol  Sanity.sol  WhitelistRegistry.sol
contracts/test/: AccessAndLiquidation.t.sol  Adapters.t.sol  ChainlinkPriceOracle.fork.t.sol  CreditAccountLifecycle.t.sol  CurveLstAdapters.t.sol  Deploy.t.sol  Factories.t.sol  Governance.t.sol  GuardianPause.t.sol  InterestRateModel.t.sol  LiquidationSeize.t.sol  (+13 more)
ops/: docker-compose.yml
scripts/: dev-fork.sh  dev-up.sh  security.sh
(+131 files in other folders)
