[project]
name = "meridian-margin-engine"
version = "0.0.0"
description = "Portfolio margin engine: pricing, stress, and risk signals for Meridian"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "uvicorn>=0.32", "pydantic>=2.9"]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.8", "mypy>=1.13", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
